feat(inputparser): 숫자 검증 기능 추가